// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments Gas Tests Individual Command Tests gas: APPROVE_ERC20 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 53776,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: SWEEP with ERC20 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 41336,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: SWEEP_WITH_FEE 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 52999,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: TRANSFER with AMB 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 33861,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: TRANSFER with ERC20 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 40242,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: TRANSFER with ETH 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 33821,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: UNWRAP_SAMB 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 53805,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: UNWRAP_SAMB_WITH_FEE 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 60191,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: WRAP_AMB 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 62948,
}
`;

exports[`Payments Gas Tests Individual Command Tests gas: WRAP_ETH 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 57425,
}
`;
